After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 734683 - playsinkconvertbin: returns true from accept caps but rejects it later
playsinkconvertbin: returns true from accept caps but rejects it later
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other All
: Normal blocker
: 1.4.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-08-12 17:03 UTC by Thiago Sousa Santos
Modified: 2014-08-13 11:29 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Thiago Sousa Santos 2014-08-12 17:03:43 UTC
playsinkconvertbin query_caps/accepts_caps handlers return that it can accept video/x-raw(OverlayMeta) when the downstream sink can accept it. This should be easily testable using playbin with fakesink.

The issue is that when it receives the caps event it will try to set this to the internal elements (as it is a raw format) and videobalance doesn't support it, so the caps fails and the pipeline errors out with not-negotiated.

Related to: https://bugzilla.gnome.org/show_bug.cgi?id=720345
Comment 1 Sebastian Dröge (slomo) 2014-08-13 07:31:27 UTC
Does not fail here with video-sink="fakesink" when using an external subtitle file. What's the best way to reproduce it?

Independent of that, fixing bug #720345 requires new API (videobalance meta) and I would prefer to not introduce that in 1.4. We should find a solution that can work without, something in playsinkconvertbin.
Comment 2 Sebastian Dröge (slomo) 2014-08-13 11:29:17 UTC
commit d280bba12657f20bc5de3419a09561364d9b0723
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Wed Aug 13 14:28:05 2014 +0300

    playsinkconvertbin: Make sure to intersect raw caps with our converter caps
    
    Otherwise we end up allowing video/x-raw with arbitrary caps features that are
    not handled by our converters.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=734683