playsinkconvertbin: Make sure to intersect raw caps with our converter caps

Otherwise we end up allowing video/x-raw with arbitrary caps features that are
not handled by our converters.

https://bugzilla.gnome.org/show_bug.cgi?id=734683